fix for ng-include

--- a/src/components/companies/company.dashboard.html
+++ b/src/components/companies/company.dashboard.html
@@ -39,7 +39,7 @@
         <!-- BEGIN Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
             <li id="network_li" class="active"><a href="#network" aria-controls="network" role="tab" data-toggle="tab" aria-expanded="true">Network</a></li>
-            <li id="profile_li" ><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" aria-expanded="false">Profile</a></li>
+            <li id="profile_li"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" aria-expanded="false">Profile</a></li>
         </ul>
         <!--/ END Nav tabs -->
 
@@ -50,13 +50,13 @@
 
             <div role="tabpanel" class="tab-pane active" id="network">
 
-                <div ng-include="'components/companies/company.dashboard.network.html'"></div>
+                <div ng-include="'company.dashboard.network.html'"></div>
 
             </div>
 
             <div role="tabpanel" class="tab-pane" id="profile">
 
-                <div ng-include="'components/companies/company.dashboard.profile.html'"></div>
+                <div ng-include="'company.dashboard.profile.html'"></div>
 
             </div>
 
