--- a/src/components/users/user.dashboard.companies.panel.html
+++ b/src/components/users/user.dashboard.companies.panel.html
@@ -15,7 +15,7 @@
 <div class="panel-footer" style="background: #fff; text-align: center;">
     <div ng-repeat="item in profile.user.companies[type.name]" style="text-align: left;">
         <div>
-            <div class="row" ng-include="'components/companies/company.list.item.html'"></div>
+            <div class="row" ng-include="'company.list.item.html'"></div>
             <div ng-if="$last" style="margin-bottom:-11px;"></div>
         </div>
     </div>
