--- a/src/components/companies/company.dashboard.network.html
+++ b/src/components/companies/company.dashboard.network.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div ng-include="'components/users/user.list.html'" ng-controller="UserController as users"></div>
+    <div ng-include="'user.list.html'" ng-controller="UserController as users"></div>
 </div>
 <div class="row" style="text-align: center;">
     <button class="btn btn-xs btn-default" ui-sref="company.edit({location_path: '', community_path: global.profile.id})">Add yourself to this {{global.resource ? 'resource' : 'company'}}</button>
