--- a/src/components/users/user.dashboard.ask.html
+++ b/src/components/users/user.dashboard.ask.html
@@ -1,7 +1,7 @@
 <form ng-if="global.user" role="form" ng-submit="profile.askQuestion()">
     <div id="questionbox" class="input-group">
         <input type="text" class="form-control input-lg" placeholder="Write a public question for {{profile.user.name | words : 0}} here.." ng-model="profile.question" required>
-                        <span class="input-group-btn">
+        <span class="input-group-btn">
                             <input type="submit" value="Ask a Question" class="btn btn-success" style="height: 46px;"/>
                         </span>
     </div>
@@ -13,10 +13,10 @@
 <br>
 <div loading-bars ng-show="profile.working" style="text-align:center; margin-left: -50px; margin-bottom: 15px;"></div>
 <div ng-show="global.community.newmessages" class="row" ng-repeat="question in global.community.newmessages">
-    <div class="col-lg-12" ng-include="'components/users/user.dashboard.ask.questions.html'">
+    <div class="col-lg-12" ng-include="'user.dashboard.ask.questions.html'">
     </div>
 </div>
 <div class="row" ng-repeat="question in global.community.messages">
-    <div class="col-lg-12" ng-include="'components/users/user.dashboard.ask.questions.html'">
+    <div class="col-lg-12" ng-include="'user.dashboard.ask.questions.html'">
     </div>
 </div>
