--- a/src/components/users/user.list.html
+++ b/src/components/users/user.list.html
@@ -35,10 +35,10 @@
                         <h2><br/>Nothing here!</h2><br/><br/></div>
                     <div ng-repeat="item in users.users" ng-switch on="$index % 2">
                         <div class="col-md-6" ng-switch-when="0">
-                            <div class="row" ng-include="'components/users/user.list.item.html'"></div>
+                            <div class="row" ng-include="'user.list.item.html'"></div>
                         </div>
                         <div class="col-md-6" ng-switch-when="1">
-                            <div class="row" ng-include="'components/users/user.list.item.html'"></div>
+                            <div class="row" ng-include="'user.list.item.html'"></div>
                         </div>
                     </div>
                 </div>
