--- a/src/components/users/user.dashboard.ask.questions.html
+++ b/src/components/users/user.dashboard.ask.questions.html
@@ -15,7 +15,23 @@
     </div>
     <div class="panel-body" style="padding:0 20px;"></div>
     <div class="panel-footer">
-        <div class="social-talk" ng-repeat="reply in question.replies" ng-include="'user.dashboard.ask.questions.replies.html'">
+        <div class="social-talk" ng-repeat="reply in question.replies">
+            <!-- ng-include="'user.dashboard.ask.questions.replies.html'" -->
+            <div class="media social-profile clearfix">
+                <a class="pull-left">
+        <img ng-src="{{reply.from.avatar || '/public/images/blank_avatar.png'}}" alt="{{reply.from.name}}" ui-sref="user.dashboard({location_path: question.from.id, profile: {}})">
+    </a>
+
+                <div class="media-body">
+                    <small><a class="pull-right" style="color: #999" ui-sref="user.dashboard({location_path: question.from.id, profile: {}})">{{reply.from.headline}}</a></small>
+                    <a style="font-weight:bold;" ui-sref="user.dashboard({location_path: reply.from.id, profile: {}})">{{reply.from.name}}</a>
+                    <small class="text-muted"> on {{ reply.published | date : 'MMM d' }}</small>
+
+                    <div class="social-content">
+                        {{reply.content}}
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="social-form">
             <form ng-submit="profile.postReply(question)">
