--- a/src/components/dashboard/dashboard.html
+++ b/src/components/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <div id="dash-tour" tour-step order="0" title="The {{global.location.name.split(',')[0] }} Startup Community" content="Your community includes people and companies, organized by industry and skillset." placement="top">
         <div class="row">
             <div class="col-xs-12 col-sm-4">
-                <div class="hpanel hblue" >
+                <div class="hpanel hblue">
                     <div class="panel-body" style="padding: 10px 5px; margin-bottom: -12px;">
                         <div class="col-xs-8" style="overflow: hidden;">
                             <div class="stats-title pull-left">
@@ -24,7 +24,40 @@
                     <div class="panel-footer" style="background: #fff; text-align: center; padding-bottom:49px;">
                         <div ng-repeat="item in global.top.people.entries | limitTo: 4" style="text-align: left;">
                             <div style="margin-right: -2px; margin-bottom:-5px;">
-                                <div class="row" ng-include="'user.list.item.html'"></div>
+                                <div class="row">
+                                    <!-- ng-include="'user.list.item.html'" -->
+                                    <div class="col-md-12 dash-table">
+                                        <div>
+                                            <a ui-sref="user.dashboard({ location_path: item.id, community_path: '', tail_path: '', noreload: true, profile: item, query: null })" ng-click="global.loaders[item.name] = true" title="View {{::item.name | words:0}}'s Profile">
+            <img ng-src="{{item.avatar || '/public/images/blank_avatar.png'}}" alt="{{::item.name}}" class="user-img widget-image img-circle pull-left" onerror="this.src='/public/images/blank_avatar.png'"/>
+        </a>
+                                        </div>
+                                        <div class="user-row list-hr">
+                                            <a ng-show="(global.community.resource || global.location.resource) && global.user.roles.leader[global.community.id]" ng-click="nav.removeUser(item)" title="Remove {{::item.name}} from {{global.community.name}}" style="font-size: 11px; color:#bbb; padding-left:4px;">remove</a>
+                                            <a ui-sref="user.dashboard({ location_path: item.id, community_path: '', tail_path: '', noreload: true, profile: item, query: null })" title="View {{::item.name | words:0}}'s Profile" ng-click="global.loaders[item.name] = true" class="dash-row-div"><strong>{{::item.name}} </strong></a>
+                                            <div class="dash-row-summary" ng-show="item.summary.length > 0">
+                                                <a title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
+                                            </div>
+                                            <span loading-bars ng-if="global.loaders[item.name]"></span>
+                                            <li ng-repeat="(item, val) in item.roles" class="user-role role-right"><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></li>
+                                            <br>
+                                            <div class="dash-row">
+                                                <span class="text-muted" ng-bind-html="::item.headline | highlight:users.lastQuery" title="{{::item.headline}}"></span>
+                                            </div>
+                                            <div ng-if="(showSummary || $state.includes('search.*')) && item.summary">
+                                                <div style="padding-bottom: 10px;">
+                                                    <hr>
+                                                    <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.summary | linky:'_blank' | highlight:users.lastQuery | safe_html"></span>
+                                                    <div id="skills" ng-if="(showSummary || users.lastQuery) && item.summary" class="skills-top">
+                                                        <li ng-repeat="skill in item.skills" class="label btn-default skills">
+                                                            <a><span ng-click="nav.search(skill)" ng-bind-html="::skill | highlight:users.lastQuery"></span></a>
+                                                        </li>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div ng-if="$last" style="margin-bottom:-12px;"></div>
                             </div>
                         </div>
@@ -57,7 +90,47 @@
                     <div class="panel-footer" style="background: #fff; text-align: center; padding-bottom:49px;">
                         <div ng-repeat="item in global.top.companies.entries | limitTo: 4" style="text-align: left;">
                             <div style="margin-right: -2px; margin-bottom:-5px;">
-                                <div class="row" ng-include="'company.list.item.html'"></div>
+                                <div class="row">
+                                    <!-- ng-include="'company.list.item.html'" -->
+                                    <div class="col-md-12 dash-table">
+                                        <div>
+                                            <a ui-sref="company.dashboard({ location_path: item.id, community_path: '', tail_path: '', noreload: true, profile: item, query: null })" ng-click="global.loaders[item.name] = true" title="View {{::item.name | words:0}}'s Profile"><img
+                ng-src="{{item.avatar || '/public/images/browser_icon.jpg'}}" alt="{{::item.name}}" class="user-img widget-image pull-left" onerror="this.src='images/browser_icon.jpg'"/></a>
+                                        </div>
+                                        <div class="user-row list-hr">
+                                            <a ui-sref="company.dashboard({ location_path: item.id, community_path: '', tail_path: '', noreload: true, profile: item, query: null })" title="View {{::item.name | words:0}}'s Profile" ng-click="global.loaders[item.name] = true" class="dash-row-div"><strong>{{::item.name}} </strong></a>
+                                            <div class="dash-row-summary" ng-show="(item.summary).length > 0" style="margin-left: -5px;">
+                                                <a title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
+                                            </div>
+                                            <span loading-bars ng-if="global.loaders[item.name]"></span>
+                                            <span ng-if="!item.resource && item.parents[0]">
+            <li class="role-right">
+                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.parents[0][0].toUpperCase() + item.parents[0].slice(1);}}</button>
+            </li>
+        </span>
+                                            <span ng-if="item.resource && item.resource_types[0]">
+            <li class="role-right">
+                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.resource_types[0][0].toUpperCase() + item.resource_types[0].slice(1);}}</button>
+            </li>
+        </span>
+                                            <br>
+                                            <div class="dash-row">
+                                                <span class="text-muted" ng-bind-html="::item.headline | highlight:companies.lastQuery" title="{{::item.headline}}"></span>
+                                            </div>
+                                            <div ng-show="(showSummary || $state.includes('search.*')) && item.summary">
+                                                <div style="padding-bottom: 10px;">
+                                                    <hr>
+                                                    <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.summary | linky:'_blank' | highlight:companies.lastQuery | safe_html"></span>
+                                                    <div id="skills" ng-if="(showSummary || companies.lastQuery) && item.summary" class="skills-top">
+                                                        <li ng-if="item.industries" ng-repeat="market in item.industries" class="label btn-default skills">
+                                                            <a><span ng-click="nav.search(market)" ng-bind-html="::market | highlight:companies.lastQuery"></span></a>
+                                                        </li>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div ng-if="$last" style="margin-bottom:-12px;"></div>
                             </div>
                         </div>
@@ -90,7 +163,47 @@
                     <div class="panel-footer" style="background: #fff; text-align: center; padding-bottom:49px;">
                         <div ng-repeat="item in global.top.resources.entries | limitTo: 4" style="text-align: left;">
                             <div style="margin-right: -2px; margin-bottom:-5px;">
-                                <div class="row" ng-include="'company.list.item.html'"></div>
+                                <div class="row">
+                                    <!-- ng-include="'company.list.item.html'" -->
+                                    <div class="col-md-12 dash-table">
+                                        <div>
+                                            <a ui-sref="company.dashboard({ location_path: item.id, community_path: '', tail_path: '', noreload: true, profile: item, query: null })" ng-click="global.loaders[item.name] = true" title="View {{::item.name | words:0}}'s Profile"><img
+                ng-src="{{item.avatar || '/public/images/browser_icon.jpg'}}" alt="{{::item.name}}" class="user-img widget-image pull-left" onerror="this.src='images/browser_icon.jpg'"/></a>
+                                        </div>
+                                        <div class="user-row list-hr">
+                                            <a ui-sref="company.dashboard({ location_path: item.id, community_path: '', tail_path: '', noreload: true, profile: item, query: null })" title="View {{::item.name | words:0}}'s Profile" ng-click="global.loaders[item.name] = true" class="dash-row-div"><strong>{{::item.name}} </strong></a>
+                                            <div class="dash-row-summary" ng-show="(item.summary).length > 0" style="margin-left: -5px;">
+                                                <a title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
+                                            </div>
+                                            <span loading-bars ng-if="global.loaders[item.name]"></span>
+                                            <span ng-if="!item.resource && item.parents[0]">
+            <li class="role-right">
+                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.parents[0][0].toUpperCase() + item.parents[0].slice(1);}}</button>
+            </li>
+        </span>
+                                            <span ng-if="item.resource && item.resource_types[0]">
+            <li class="role-right">
+                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.resource_types[0][0].toUpperCase() + item.resource_types[0].slice(1);}}</button>
+            </li>
+        </span>
+                                            <br>
+                                            <div class="dash-row">
+                                                <span class="text-muted" ng-bind-html="::item.headline | highlight:companies.lastQuery" title="{{::item.headline}}"></span>
+                                            </div>
+                                            <div ng-show="(showSummary || $state.includes('search.*')) && item.summary">
+                                                <div style="padding-bottom: 10px;">
+                                                    <hr>
+                                                    <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.summary | linky:'_blank' | highlight:companies.lastQuery | safe_html"></span>
+                                                    <div id="skills" ng-if="(showSummary || companies.lastQuery) && item.summary" class="skills-top">
+                                                        <li ng-if="item.industries" ng-repeat="market in item.industries" class="label btn-default skills">
+                                                            <a><span ng-click="nav.search(market)" ng-bind-html="::market | highlight:companies.lastQuery"></span></a>
+                                                        </li>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div ng-if="$last" style="margin-bottom:-12px;"></div>
                             </div>
                         </div>
@@ -115,7 +228,8 @@
                     <div class="panel-body" ng-repeat="item in global.top.skills.entries | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ng-click="nav.search(item.value)"><h4 style="font-weight: 200;">{{item.value}}</h4>
+                                <a ng-click="nav.search(item.value)">
+                                    <h4 style="font-weight: 200;">{{item.value}}</h4>
                                     <uib-progressbar ng-attr-value="(item.count/global.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                                 </a>
                             </div>
@@ -142,7 +256,8 @@
                     <div class="panel-body" ng-repeat="item in global.top.industries.entries | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ng-click="nav.search(item.value)"><h4 style="font-weight: 200;">{{item.value}}</h4>
+                                <a ng-click="nav.search(item.value)">
+                                    <h4 style="font-weight: 200;">{{item.value}}</h4>
                                     <uib-progressbar ng-attr-value="(item.count/global.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                                 </a>
                             </div>
@@ -168,7 +283,8 @@
                     <div class="panel-body" ng-repeat="item in global.top.parents | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ng-click="nav.search(item.value)"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4>
+                                <a ng-click="nav.search(item.value)">
+                                    <h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4>
                                     <uib-progressbar value="item.value" max="global.top.max" type="success" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                                 </a>
                             </div>
