--- a/src/components/users/user.dashboard.companies.html
+++ b/src/components/users/user.dashboard.companies.html
@@ -1,4 +1,4 @@
-<div class="row">ASDGASF
+<div class="row">
     <div class="col-xs-12 col-md-6">
         <div class="hpanel" ng-class="type.color" ng-repeat="type in ::profile.team_panels" ng-if="!($index % 2)">
             <!-- ng-include="'user.dashboard.companies.panel.html'" -->
