--- a/src/components/companies/company.dashboard.html
+++ b/src/components/companies/company.dashboard.html
@@ -273,7 +273,7 @@
                         </div>
                     </div>
                     <div class="row" style="text-align: center;">
-                        <button class="btn btn-xs btn-default" ui-sref="company.edit({location_path: '', community_path: global.profile.id})">Add yourself to this {{global.resource ? 'resource' : 'company'}}</button>
+                        <button class="btn btn-xs btn-default" ui-sref="company.edit({location_path: '', community_path: global.profile.id})">Add yourself to this {{global.community.resource ? 'resource' : 'company'}}</button>
                     </div>
 
                 </div>
